kubernetes/apps/drawio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    toolkit.fluxcd.io/tenant: dev-team
