kubernetes/apps/drawio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app.kubernetes.io/name: drawio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: drawio
