kubernetes/apps/drawio/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio-tailscale
  namespace: drawio
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: drawio
      port:
        number: 8080
  tls:
    - hosts:
        - drawio
